--- a/src/dayView.html
+++ b/src/dayView.html
@@ -15,7 +15,7 @@
 
 <body>
 
-<input type="date"> //stackoverflow
+<input type="date">
 <table style="width:100%">
     <caption>Day View</caption>
     <tr>
