Implementations and View updates
implemented drop down selector across views, developed sample monthly
layout, redesigned daily layout, developed sample year view. Linked
pages together from drop down. Re-organized file layout in workspace.

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -8,12 +8,12 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="../apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <link rel="stylesheet" href="../css/main.css">
+        <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
 
         <style>
             ul {
@@ -78,8 +78,8 @@
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-        <script src="js/plugins.js"></script>
-        <script src="js/main.js"></script>
+        <script src="../js/plugins.js"></script>
+        <script src="../js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
@@ -93,10 +93,11 @@
 
         <ul>
             <li class="dropdown">
-                <a href="dayView.html" class="dropbtn">Day View</a>
+                <a href="index.html" class="dropbtn">Home</a>
                 <div class="dropdown-content">
-                    <a href="monthlyView.html">Month View</a>
-                    <a href="#">Year View</a>
+                    <a href="dayView.html">Day View</a>
+                    <a href="sampleMonthly.html">Month View</a>
+                    <a href="yearView.html">Year View</a>
                     <a href="#">Week View</a>
                 </div>
             </li>
