--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -8,12 +8,12 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/main.css">
-    <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+    <link rel="stylesheet" href="../css/main.css">
+    <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
 
     <style>
         ul {
@@ -75,23 +75,6 @@
 
 <!-- Add your site or application content here -->
 <p>Hello world! This is HTML5 Boilerplate.</p>
-
-<script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
-
-<ul>
-
-    <li class="dropdown">
-        <a href="monthlyView.html" class="dropbtn">Month View</a>
-        <div class="dropdown-content">
-            <a href="dayView.html">Day View</a>
-            <a href="#">Year View</a>
-            <a href="#">Week View</a>
-        </div>
-    </li>
-</ul>
 
 </body>
 </html>
