--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -74,12 +74,8 @@
 </ul>
 
 <!--Temp date picker to test month variability-->
-<input type="month" id="myMonth" value="2014-05">
-<button onclick="myFunction()">Go</button>
-<p id="update"></p>
-
-
-
+<input type="month" id="myMonth" value="2016-09">
+<button onclick="myFunction()">Test</button>
 
 <script>
     function myFunction() {
@@ -87,10 +83,18 @@
         document.getElementById("update").innerHTML = x;
     }
 </script>
+
+
+
 <!--Calendar format setup-->
-<TABLE BORDER=3 CELLSPACING=3 CELLPADDING=3>
+<TABLE CELLSPACING=3 CELLPADDING=3>
     <TR>
-        <TD COLSPAN="7" ALIGN=center><B>September 2016</B></TD>
+        <TD
+            COLSPAN="7" ALIGN=center>
+            <B>
+                <p id="update"></p>
+            </B>
+        </TD>
     </TR>
     <TR>
         <TD ALIGN=center>Sun</TD>
