--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -2,6 +2,8 @@
 
 <html class="no-js" lang="">
 
+<!--table css from http://www.w3schools.com/css/css_table.asp-->
+
 <head>
     <style>
         ul {
@@ -53,6 +55,19 @@
         .dropdown:hover .dropdown-content {
             display: block;
         }
+
+
+    table {
+    border-collapse: collapse;
+    width: 100%;
+    }
+
+    th, td {
+    padding: 8px;
+    text-align: center;
+    }
+
+    tr:hover{background-color:#f5f5f5}
     </style>
 </head>
 <body>
@@ -90,74 +105,74 @@
 <TABLE CELLSPACING=3 CELLPADDING=3>
     <TR>
         <TD
-            COLSPAN="7" ALIGN=center>
+            COLSPAN="7">
             <B>
                 <p id="update"></p>
             </B>
         </TD>
     </TR>
     <TR>
-        <TD ALIGN=center>Sun</TD>
-        <TD ALIGN=center>Mon</TD>
-        <TD ALIGN=center>Tue</TD>
-        <TD ALIGN=center>Wed</TD>
-        <TD ALIGN=center>Thu</TD>
-        <TD ALIGN=center>Fri</TD>
-        <TD ALIGN=center>Sat</TD>
+        <TD>Sun</TD>
+        <TD>Mon</TD>
+        <TD>Tue</TD>
+        <TD>Wed</TD>
+        <TD>Thu</TD>
+        <TD>Fri</TD>
+        <TD>Sat</TD>
     </TR>
     <TR>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center>1</TD>
-        <TD ALIGN=center>2</TD>
-        <TD ALIGN=center>3</TD>
+        <TD></TD>
+        <TD></TD>
+        <TD></TD>
+        <TD></TD>
+        <TD>1</TD>
+        <TD>2</TD>
+        <TD>3</TD>
     </TR>
     <TR>
-        <TD ALIGN=center>4</TD>
-        <TD ALIGN=center>5</TD>
-        <TD ALIGN=center>6</TD>
-        <TD ALIGN=center>7</TD>
-        <TD ALIGN=center>8</TD>
-        <TD ALIGN=center>9</TD>
-        <TD ALIGN=center>10</TD>
+        <TD>4</TD>
+        <TD>5</TD>
+        <TD>6</TD>
+        <TD>7</TD>
+        <TD>8</TD>
+        <TD>9</TD>
+        <TD>10</TD>
     </TR>
     <TR>
-        <TD ALIGN=center>11</TD>
-        <TD ALIGN=center>12</TD>
-        <TD ALIGN=center>13</TD>
-        <TD ALIGN=center>14</TD>
-        <TD ALIGN=center>15</TD>
-        <TD ALIGN=center>16</TD>
-        <TD ALIGN=center>17</TD>
+        <TD>11</TD>
+        <TD>12</TD>
+        <TD>13</TD>
+        <TD>14</TD>
+        <TD>15</TD>
+        <TD>16</TD>
+        <TD>17</TD>
     </TR>
     <TR>
-        <TD ALIGN=center>18</TD>
-        <TD ALIGN=center>19</TD>
-        <TD ALIGN=center>20</TD>
-        <TD ALIGN=center>21</TD>
-        <TD ALIGN=center>22</TD>
-        <TD ALIGN=center>23</TD>
-        <TD ALIGN=center>24</TD>
+        <TD>18</TD>
+        <TD>19</TD>
+        <TD>20</TD>
+        <TD>21</TD>
+        <TD>22</TD>
+        <TD>23</TD>
+        <TD>24</TD>
     </TR>
     <TR>
-        <TD ALIGN=center>25</TD>
-        <TD ALIGN=center>26</TD>
-        <TD ALIGN=center>27</TD>
-        <TD ALIGN=center>28</TD>
-        <TD ALIGN=center>29</TD>
-        <TD ALIGN=center>30</TD>
-        <TD ALIGN=center>29</TD>
+        <TD>25</TD>
+        <TD>26</TD>
+        <TD>27</TD>
+        <TD>28</TD>
+        <TD>29</TD>
+        <TD>30</TD>
+        <TD>29</TD>
     </TR>
     <TR>
-        <TD ALIGN=center>31</TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
-        <TD ALIGN=center></TD>
+        <TD>31</TD>
+        <TD></TD>
+        <TD></TD>
+        <TD></TD>
+        <TD></TD>
+        <TD></TD>
+        <TD></TD>
 
     </TR>
 </TABLE>
