week layout add event

--- a/src/html/weeLayout.html
+++ b/src/html/weeLayout.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <input type="date">
+    <input type="time"/>
     <style>
         table, th, td {
             border: 12px solid black;
@@ -20,13 +22,13 @@
 
 <table style="width:100%">
       <tr>
-        <th>Sunday</th>
-        <th>Monday</th>
-        <th>Tuesday</th>
-    <th>Wednesday</th>
-    <th>Thursday</th>
-    <th>Friday</th>
-    <th>Saturday</th>
+    <th>Sunday<p><a href="Sunday">Add an event</a></p></th>
+    <th>Monday<p><a href="Monday">Add an event</a></p></th>
+    <th>Tuesday<p><a href="Tuesday">Add an event</a></p>
+    <th>Wednesday<p><a href="Wednesday">Add an event</a></p></th>
+    <th>Thursday<p><a href="Thursday">Add an event</a></p></th>
+    <th>Friday<p><a href="Friday">Add an event</a></p></th>
+    <th>Saturday<p><a href="Saturday">Add an event</a></p></th>
       </tr>
     </tr>
     <tr>
