--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -102,80 +102,80 @@
 
 
 <!--Calendar format setup-->
-<TABLE CELLSPACING=3 CELLPADDING=3>
-    <TR>
-        <TD
+<table CELLSPACING=3 CELLPADDING=3>
+    <th>
+        <td
             COLSPAN="7">
-            <B>
+            <b>
                 <p id="update"></p>
-            </B>
-        </TD>
-    </TR>
-    <TR>
-        <TD>Sun</TD>
-        <TD>Mon</TD>
-        <TD>Tue</TD>
-        <TD>Wed</TD>
-        <TD>Thu</TD>
-        <TD>Fri</TD>
-        <TD>Sat</TD>
-    </TR>
-    <TR>
-        <TD></TD>
-        <TD></TD>
-        <TD></TD>
-        <TD></TD>
-        <TD>1</TD>
-        <TD>2</TD>
-        <TD>3</TD>
-    </TR>
-    <TR>
-        <TD>4</TD>
-        <TD>5</TD>
-        <TD>6</TD>
-        <TD>7</TD>
-        <TD>8</TD>
-        <TD>9</TD>
-        <TD>10</TD>
-    </TR>
-    <TR>
-        <TD>11</TD>
-        <TD>12</TD>
-        <TD>13</TD>
-        <TD>14</TD>
-        <TD>15</TD>
-        <TD>16</TD>
-        <TD>17</TD>
-    </TR>
-    <TR>
-        <TD>18</TD>
-        <TD>19</TD>
-        <TD>20</TD>
-        <TD>21</TD>
-        <TD>22</TD>
-        <TD>23</TD>
-        <TD>24</TD>
-    </TR>
-    <TR>
-        <TD>25</TD>
-        <TD>26</TD>
-        <TD>27</TD>
-        <TD>28</TD>
-        <TD>29</TD>
-        <TD>30</TD>
-        <TD>29</TD>
-    </TR>
-    <TR>
-        <TD>31</TD>
-        <TD></TD>
-        <TD></TD>
-        <TD></TD>
-        <TD></TD>
-        <TD></TD>
-        <TD></TD>
+            </b>
+        </td>
+    </th>
+    <tr>
+        <td>Sun</td>
+        <td>Mon</td>
+        <td>Tue</td>
+        <td>Wed</td>
+        <td>Thu</td>
+        <td>Fri</td>
+        <td>Sat</td>
+    </tr>
+    <tr>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td>1</td>
+        <td>2</td>
+        <td>3</td>
+    </tr>
+    <tr>
+        <td>4</td>
+        <td>5</td>
+        <td>6</td>
+        <td>7</td>
+        <td>8</td>
+        <td>9</td>
+        <td>10</td>
+    </tr>
+    <tr>
+        <td>11</td>
+        <td>12</td>
+        <td>13</td>
+        <td>14</td>
+        <td>15</td>
+        <td>16</td>
+        <td>17</td>
+    </tr>
+    <tr>
+        <td>18</td>
+        <td>19</td>
+        <td>20</td>
+        <td>21</td>
+        <td>22</td>
+        <td>23</td>
+        <td>24</td>
+    </tr>
+    <tr>
+        <td>25</td>
+        <td>26</td>
+        <td>27</td>
+        <td>28</td>
+        <td>29</td>
+        <td>30</td>
+        <td>29</td>
+    </tr>
+    <tr>
+        <td>31</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
 
-    </TR>
-</TABLE>
+    </tr>
+</table>
 
 </body>
 </html>
