--- a/src/html/weeLayout.html
+++ b/src/html/weeLayout.html
@@ -15,7 +15,7 @@
         table#t01 {
             width: 100%;
             background-color: #f1f1c1;
-        } //
+        }
     </style>
 </head>
 <body>
@@ -38,7 +38,7 @@
 </table>
 <br>
 </body>
-</html>
+</html> //
 
 
 
