--- a/src/html/weeLayout.html
+++ b/src/html/weeLayout.html
@@ -5,7 +5,7 @@
     <input type="time"/>
     <style>
         table, th, td {
-            border: 12px solid black;
+            border: 5px solid black;
             border-collapse: collapse;
         }
         th, td {
@@ -22,13 +22,13 @@
 
 <table style="width:100%">
       <tr>
-    <th>Sunday<p><a href="Sunday">Add an event</a></p></th>
-    <th>Monday<p><a href="Monday">Add an event</a></p></th>
-    <th>Tuesday<p><a href="Tuesday">Add an event</a></p>
-    <th>Wednesday<p><a href="Wednesday">Add an event</a></p></th>
-    <th>Thursday<p><a href="Thursday">Add an event</a></p></th>
-    <th>Friday<p><a href="Friday">Add an event</a></p></th>
-    <th>Saturday<p><a href="Saturday">Add an event</a></p></th>
+    <th>Sunday<p><a href="Sunday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a> </p></a></p></th>
+    <th>Monday<p><a href="Monday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
+    <th>Tuesday<p><a href="Tuesday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p>
+    <th>Wednesday<p><a href="Wednesday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
+    <th>Thursday<p><a href="Thursday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
+    <th>Friday<p><a href="Friday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
+    <th>Saturday<p><a href="Saturday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
       </tr>
     </tr>
     <tr>
@@ -38,7 +38,7 @@
 </table>
 <br>
 </body>
-</html> //
+</html>
 
 
 
