--- a/src/html/weeLayout.html
+++ b/src/html/weeLayout.html
@@ -22,13 +22,13 @@
 
 <table style="width:100%">
       <tr>
-    <th>Sunday<p><a href="Sunday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a> </p></a></p></th>
-    <th>Monday<p><a href="Monday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
-    <th>Tuesday<p><a href="Tuesday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p>
-    <th>Wednesday<p><a href="Wednesday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
-    <th>Thursday<p><a href="Thursday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
-    <th>Friday<p><a href="Friday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
-    <th>Saturday<p><a href="Saturday"><p><a href="http://www.rapidtables.com/tools/notepad.htm">Add an event</a></p></th>
+    <th>Sunday<p><a href="Sunday"><p><a href="local storage>Add an event</a> </p></a></p></th>
+    <th>Monday<p><a href="Monday"><p><a href="local storage">Add an event</a></p></th>
+    <th>Tuesday<p><a href="Tuesday"><p><a href="local storage">Add an event</a></p>
+    <th>Wednesday<p><a href="Wednesday"><p><a href="local storage">Add an event</a></p></th>
+    <th>Thursday<p><a href="Thursday"><p><a href="local storage">Add an event</a></p></th>
+    <th>Friday<p><a href="Friday"><p><a href="local storage">Add an event</a></p></th>
+    <th>Saturday<p><a href="Saturday"><p><a href="local storage">Add an event</a></p></th>
       </tr>
     </tr>
     <tr>
