--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -6,68 +6,25 @@
 
 <head>
     <style>
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            background-color: #333;
+        table {
+            border-collapse: collapse;
+            width: 100%;
         }
 
-        li {
-            float: left;
-        }
-
-        li a, .dropbtn {
-            display: inline-block;
-            color: white;
+        td {
+            padding: 8px;
             text-align: center;
-            padding: 14px 16px;
-            text-decoration: none;
         }
 
-        li a:hover, .dropdown:hover .dropbtn {
-            background-color: red;
+        th {
+            padding: 8px;
+            text-align: center;
         }
 
-        li.dropdown {
-            display: inline-block;
+        .days:hover {
+            background-color: #696969
         }
 
-        .dropdown-content {
-            display: none;
-            position: absolute;
-            background-color: #f9f9f9;
-            min-width: 160px;
-            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        }
-
-        .dropdown-content a {
-            color: black;
-            padding: 12px 16px;
-            text-decoration: none;
-            display: block;
-            text-align: left;
-        }
-
-        .dropdown-content a:hover {background-color: #f1f1f1}
-
-        .dropdown:hover .dropdown-content {
-            display: block;
-        }
-
-
-    table {
-    border-collapse: collapse;
-    width: 100%;
-    }
-
-    th, td {
-    padding: 8px;
-    text-align: center;
-    }
-
-    tr:hover{background-color:#f5f5f5}
     </style>
 </head>
 <body>
@@ -78,6 +35,10 @@
 </div>
 
 <script>
+    function openWeek(id) {
+        alert(id);
+    }
+
     function addTable() {
         var myTableDiv = document.getElementById("metric_results")
         var table = document.createElement('TABLE')
@@ -95,28 +56,28 @@
         heading[5] = "Fri"
         heading[6] = "Sat"
 
-        var f=0//first day, VARIABLE TO MONTH
-        var l=30//last day, VARIABLE TO MONTH
-        var x=1
+        var f = 6 //first day, VARIABLE TO MONTH
+        var l = 30 //last day, VARIABLE TO MONTH
+        var x = 1
 
         var cal = new Array()
 
-        for (var i = 0; i < 6; i++){
+        for (var i = 0; i < 6; i++) {
             cal[i] = new Array(7)
         }
 
 
-        for(var i=0; i<6; i++){
-            for(var j=0; j<7; j++){
-                cal[i][j]=""
+        for (var i = 0; i < 6; i++) {
+            for (var j = 0; j < 7; j++) {
+                cal[i][j] = ""
             }
         }
 
         startOfWeek = f
-        for(var i=0; i<6; i++){
-            for(var j=startOfWeek; j<7; j++){
-                cal[i][j]=x
-                if(7*i+j > l + f - 2){
+        for (var i = 0; i < 6; i++) {
+            for (var j = startOfWeek; j < 7; j++) {
+                cal[i][j] = x
+                if (7 * i + j > l + f - 2) {
                     i = 6
                     j = 7
                 }
@@ -138,6 +99,13 @@
         //TABLE ROWS
         for (i = 0; i < cal.length; i++) {
             var tr = document.createElement('TR');
+            if (f + l >= 35 || i < 5)
+                tr.setAttribute("class", "days")
+            tr.setAttribute("id", "week" + i)
+            tr.setAttribute("onclick", "openWeek(" + i + ")")
+            //"row1"  -> "row" + i
+            //var oldThingThatYouWant = document.getElementByID("week0")
+
             for (j = 0; j < cal[i].length; j++) {
                 var td = document.createElement('TD')
                 td.appendChild(document.createTextNode(cal[i][j]));
@@ -147,6 +115,7 @@
         }
         myTableDiv.appendChild(table)
     }
+
 
 </script>
 <!--
