--- a/src/html/weekView.html
+++ b/src/html/weekView.html
@@ -1,77 +1,10 @@
 <!DOCTYPE html>
-
-<html><!--general styling--><head><style>
-    *
-    {
-        font-family: century gothic;
-        color: #2a2a2a;
-    }
-
-    div.corner
-    {
-        position: fixed;
-        top: 20px;
-        right: 5%;
-    }
-    div.corner2
-    {
-        position: fixed;
-        top: 20px;
-        left: 5%;
-    }
-    div.tables
-    {
-        width: 100%;
-        border: 1;
-        top: 10px;
-    }
-    td
-    {
-        vertical-align: top;
-    }
-
-</style>
-
-    <!--tab icon-->
-    <link rel="icon" href="http://www.clipartbest.com/cliparts/eTM/Kjn/eTMKjnGTn.png">
-
-    <!--page title-->
-
-    <meta http-equiv="content-type" content="text/html; charset=windows-1252">
-    <title>Timeline View</title>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>weekView</title>
 </head>
+<body>
 
-<!--background picture-->
-<body background="http://www.pixeden.com/media/k2/galleries/165/003-subtle-light-pattern-background-texture-vol5.jpg">
-
-<!--buttons to leave page-->
-<div class="corner">
-    <form action="userLists.php">
-        <input type="submit" value="My Lists ">
-    </form>
-    <form action="logout.php">
-        <input type="submit" value="Log out">
-    </form>
-</div>
-
-
-<h1><center>TimeLine View for: testfile </center></h1>
-
-
-<table style="width:100%"><tbody><tr><td width="16%"><table style="width:100%" border="1"><tbody><tr><th>Chosen Date</th></tr></tbody></table></td><td width="16%"><table style="width:100%" border="1"><tbody><tr><th>Today</th></tr></tbody></table></td><td width="16%"><table style="width:100%" border="1"><tbody><tr><th>Tomorrow</th></tr></tbody></table></td><td width="16%"><table style="width:100%" border="1"><tbody><tr><th>This Week</th></tr></tbody></table></td><td width="16%"><table style="width:100%" border="1"><tbody><tr><th>This Month</th></tr></tbody></table></td><td width="16%"><table style="width:100%" border="1"><tbody><tr><th>Eventually</th></tr></tbody></table></td></tr></tbody></table><br>Choose a Date:<br><form action="timeline.php"> <input type="date" id="date" name="date"><input type="hidden" name="projData" value="testfile"><input type="submit"> </form>
-<!--give use option to choose list-->
-<div class="corner2">
-    Choose a List:
-    <form action="timeline.php">
-        <select name="projData"><option value="test1">test1</option>
-            <option value="test3">test3</option>
-            <option value="test5">test5</option>
-            <option value="test7">test7</option>
-            <option value="test11">test11</option>
-            <option value="testfile">testfile</option>
-        </select>
-        <input type="submit" value="submit">
-    </form>
-
-</div></body></html>
-
+</body>
+</html>
