Rough weekView layout

--- a/src/html/weekView.html
+++ b/src/html/weekView.html
@@ -5,6 +5,89 @@
     <title>weekView</title>
 </head>
 <body>
+<table>
+    <tr>
+        <td>
+            <a>
+                Sunday
+            </a>
+        </td>
+        <td>
+            <a>
 
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+        <a>
+            Monday
+        </a>
+    </td>
+        <td>
+            <a>
+                event
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a>
+                Tuesday
+            </a>
+        </td>
+        <td>
+            <a>
+                event
+            </a>
+        </td>
+    </tr>    <tr>
+    <td>
+        <a>
+           Wednesday
+        </a>
+    </td>
+    <td>
+        <a>
+            event
+        </a>
+    </td>
+</tr>
+    <tr>
+        <td>
+            <a>
+                Thursday
+            </a>
+        </td>
+        <td>
+            <a>
+                event
+            </a>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            <a>
+                Friday
+            </a>
+        </td>
+        <td>
+            <a>
+                event
+            </a>
+        </td>
+    </tr>    <tr>
+    <td>
+        <a>
+            Saturday
+        </a>
+    </td>
+    <td>
+        <a>
+            event
+        </a>
+    </td>
+</tr>
+</table>
 </body>
 </html>
