--- a/src/html/dayView.html
+++ b/src/html/dayView.html
@@ -1,72 +1,10 @@
 <!DOCTYPE html>
 <html class="no-js" lang="">
 <head>
-    <style>
-    ul {
-        list-style-type: none;
-        margin: 0;
-        padding: 0;
-        overflow: hidden;
-        background-color: #333;
-    }
 
-    li {
-        float: left;
-    }
-
-    li a, .dropbtn {
-        display: inline-block;
-        color: white;
-        text-align: center;
-        padding: 14px 16px;
-        text-decoration: none;
-    }
-
-    li a:hover, .dropdown:hover .dropbtn {
-        background-color: red;
-    }
-
-    li.dropdown {
-        display: inline-block;
-    }
-
-    .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    }
-
-    .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
-    }
-
-    .dropdown-content a:hover {background-color: #f1f1f1}
-
-    .dropdown:hover .dropdown-content {
-        display: block;
-    }
-</style>
 </head>
 
 <body>
-
-<ul>
-    <li class="dropdown">
-        <a href="dayView.html" class="dropbtn">Day View</a>
-        <div class="dropdown-content">
-            <a href="index.html">Home</a>
-            <a href="sampleMonthly.html">Month View</a>
-            <a href="yearView.html">Year View</a>
-            <a href="#">Week View</a>
-        </div>
-    </li>
-</ul>
 
 <input type="date">
 <input type="time"/>
@@ -75,12 +13,40 @@
 <br>
 <br>
 
-<textarea rows="20" cols="50" id = "event" placeholder='What do you need to do?' >
+<textarea id="user" rows="20" cols="50" placeholder='What do you need to do?'>
 </textarea>
+
+<br />
+<button id="save">Save</button>
+<button id="load">Load</button>
+<!--<button id="save">Clear</button>-->
+
+<script type="text/javascript">
+
+    //save entered gmail address
+    document.getElementById("save").addEventListener("click", function ()
+    {
+        var date = localStorage["date"];
+        var event = document.getElementById("user").value ;
+
+        //localStorage["user"] = user ;
+        localStorage.setItem(date, event) ;
+        alert("saved") ;
+
+    } , false);
+
+    document.getElementById("load").addEventListener("click", function ()
+    {
+        var event = localStorage["event"] ;
+        document.getElementById("user").value = user ;
+        alert(user)
+        console.log(user);
+    } , false);
+
+</script>
+
+
 </body>
 
-
 </html>
-<input type="button" value="Clear" onclick="javascript:eraseText();">
-<input type="button" value="Save" onclick="javascript:saveText();">
 
