--- a/src/html/weeLayout.html
+++ b/src/html/weeLayout.html
@@ -1,7 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <input type="date">
+    <input type="date" id = "myDate">
+    <button id="save">Save</button>
+
+    <script type="text/javascript">
+
+        //save entered gmail address
+        document.getElementById("save").addEventListener("click", function ()
+        {
+            var date = document.getElementById("myDate").value ;
+            //localStorage["user"] = user ;
+            localStorage.setItem("date", date) ;
+            alert("saved") ;
+
+        } , false);
+
+    </script>
     <input type="time"/>
     <style>
         table, th, td {
@@ -22,8 +37,8 @@
 
 <table style="width:100%">
       <tr>
-    <th>Sunday<p><a href="Sunday"><p><a href="local storage>Add an event</a> </p></a></p></th>
-    <th>Monday<p><a href="Monday"><p><a href="local storage">Add an event</a></p></th>
+    <th>Sunday<p><a value = "Sunday" href="Sunday"><p><a href="dayView.html">Add an event</a> </p></th>
+    <th>Monday<p><a href="Monday"><p><a href="dayView.html">Add an event</a></p></th>
     <th>Tuesday<p><a href="Tuesday"><p><a href="local storage">Add an event</a></p>
     <th>Wednesday<p><a href="Wednesday"><p><a href="local storage">Add an event</a></p></th>
     <th>Thursday<p><a href="Thursday"><p><a href="local storage">Add an event</a></p></th>
