--- a/src/html/weekView.html
+++ b/src/html/weekView.html
@@ -26,7 +26,7 @@
     </td>
         <td>
             <a>
-                event
+                event<!--chaanged dynamically with amount of events added-->
             </a>
         </td>
     </tr>
