--- a/src/html/monthlyView.html
+++ b/src/html/monthlyView.html
@@ -124,9 +124,13 @@
     }
 
     function addTable(f, l) {
-//        var month = localStorage["month"] ;
-//        alert(month)
-//    }
+        var month = localStorage["month"]
+        var name = document.createElement("H")
+        name.setAttribute("id", "monthName")
+        var text = document.createTextNode(month)
+        name.appendChild(text)
+
+
 
         var myTableDiv = document.getElementById("metric_results")
         var table = document.createElement('TABLE')
@@ -145,9 +149,6 @@
         heading[6] = "Sat"
 
 
-
-//        var f = 6 //first day, VARIABLE TO MONTH
-//        var l = 30 //last day, VARIABLE TO MONTH
         var x = 1
 
         var cal = new Array()
@@ -203,6 +204,7 @@
             }
             tableBody.appendChild(tr);
         }
+        myTableDiv.appendChild(name)
         myTableDiv.appendChild(table)
     }
 
