Month format changed to accomodate previous funcitonaility

--- a/src/html/weekView.html
+++ b/src/html/weekView.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>weekView</title>
+    <style>
+        tr:hover {
+            background-color: dimgrey;
+            cursor: pointer;
+        }
+        table tr td {
+            padding-left: 0;
+            padding-right: 0;
+        }
+
+    </style>
 </head>
 <body>
 <table>
     <tr>
         <td>
-            <a>
-                Sunday
-            </a>
+            <a href="dayView.html">Sunday</a>
         </td>
         <td>
-            <a>
-
-            </a>
+                event
         </td>
     </tr>
     <tr>
@@ -89,5 +96,6 @@
     </td>
 </tr>
 </table>
+<p>click a day to edit</p>
 </body>
 </html>
