--- a/src/html/yearView.html
+++ b/src/html/yearView.html
@@ -20,11 +20,10 @@
     <div class="calendar-body">
 
         <div class="row months">
-            <div id = "a" class="col-lg-1">  <a href="monthlyView.html">  <p>August</p></a></div>
             <script>
                 document.getElementById("a").addEventListener("click", function ()
                 {
-                    var month = "August" ;
+                    var month = 8 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -32,7 +31,7 @@
             <script>
                 document.getElementById("b").addEventListener("click", function ()
                 {
-                    var month = "September" ;
+                    var month = 9 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -40,7 +39,7 @@
             <script>
                 document.getElementById("c").addEventListener("click", function ()
                 {
-                    var month = "October" ;
+                    var month = 10 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -48,7 +47,7 @@
             <script>
                 document.getElementById("d").addEventListener("click", function ()
                 {
-                    var month = "November" ;
+                    var month = 11 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -59,7 +58,7 @@
             <script>
                 document.getElementById("e").addEventListener("click", function ()
                 {
-                    var month = "December" ;
+                    var month = 12 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -67,7 +66,7 @@
             <script>
                 document.getElementById("f").addEventListener("click", function ()
                 {
-                    var month = "January" ;
+                    var month = 1 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -75,7 +74,7 @@
             <script>
                 document.getElementById("g").addEventListener("click", function ()
                 {
-                    var month = "February" ;
+                    var month = 2 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -83,7 +82,7 @@
             <script>
                 document.getElementById("h").addEventListener("click", function ()
                 {
-                    var month = "March" ;
+                    var month = 3 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -94,7 +93,7 @@
             <script>
                 document.getElementById("i").addEventListener("click", function ()
                 {
-                    var month = "April" ;
+                    var month = 4 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -102,7 +101,7 @@
             <script>
                 document.getElementById("j").addEventListener("click", function ()
                 {
-                    var month = "May" ;
+                    var month = 5 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -110,7 +109,7 @@
             <script>
                 document.getElementById("k").addEventListener("click", function ()
                 {
-                    var month = "June" ;
+                    var month = 6 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
@@ -118,7 +117,7 @@
             <script>
                 document.getElementById("l").addEventListener("click", function ()
                 {
-                    var month = "July" ;
+                    var month = 7 ;
                     localStorage.setItem("month", month);
                 } , false);
             </script>
